# awesome-cpu-first-ai

./: .gitignore  .lycheeignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  index.html  lychee.toml  robots.txt  sitemap.xml
.github/: dependabot.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: general.yml
.github/ISSUE_TEMPLATE/: config.yml  dispute-benchmark.yml  doc-improvement.yml  feature-request.yml  report-stale-link.yml  submit-benchmark.yml  suggest-resource.yml
.github/actions/run-staleness-check/: action.yml
.github/scripts/: _staleness_common.py  check-content-staleness.py  check-snippets.py  check-staleness.py  check-toc.py
.github/workflows/: calculator-lint.yml  doc-quality.yml  link-check.yml  staleness.yml
calculator/: README.md  app.py  cost-calculator.py  power-calculator.py  pyproject.toml
calculator/lib/: constants.py  cost.py  power.py  presets.py
docs/: benchmark-methodology.md  benchmark-suite-proposal.md  community-hackathon.md  cost-calculator.md  cpu-ai-gap-map.md  cpu-ai-os-reference-stack.md  cpu-finetuning-benchmarks.md  cpu-inference-deployment.md  cpu-native-models.md  cpu-vs-nvidia-decision-framework.md  ecosystem-evidence.md  edge-mobile-playbook.md  green-inference-cheat-sheet.md  green-inference.md  hardware-reference.md  mobile-cpu-inference.md  model-conversion-guide.md  multimodal-cpu.md  quickstart.md  serverless-cost-dashboard.md  serverless-patterns.md  state-of-cpu-inference-report.md  troubleshooting.md
